# the-spymaster-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  layer_handler.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  settings.toml  setup.py  zappa_settings.json
.github/actions/deploy/: action.yml
.github/workflows/: development.yml  lint.yml  pipeline.yml  tests.yml
api/: Makefile  admin.py  apps.py  client.py  middleware.py  pyproject.toml  urls.py
api/logic/: errors.py  game.py  language.py
api/logic/recaptcha/: validator.py
api/management/commands/: dev_init.py  temp.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  base.py  game.py  request.py  response.py
api/serializers/: users.py
api/structs/: base.py  request.py  response.py
api/tests/: base_test.py  spymaster_test.py
api/tests/integration_tests/api_tests/: api_test.py
api/tests/integration_tests/other/: test_admin_loads.py  test_index_loads.py
api/the_spymaster_api/: client.py  client_classic.py  client_duet.py  client_mini.py
api/the_spymaster_api/structs/: __init__.py  errors.py  request.py  requests.py  response.py  responses.py
api/the_spymaster_api/structs/abstract/: responses.py
api/the_spymaster_api/structs/classic/: requests.py  responses.py
api/the_spymaster_api/structs/duet/: requests.py  responses.py
api/the_spymaster_api/structs/mini/: requests.py  responses.py
api/views/: __init__.py  auth.py  authentication_classes.py  common.py  endpoint.py  game.py  social_hooks.py
client/: Makefile  setup.py
client/the_spymaster_api/: client.py  structs
deployment/: deployment.sh  zappa_package_cleaner.py
docker/: dynamo.yml
playground/: multithread_logging.py
scripts/: build_layer.sh  cron.sh  run_server.sh  update.sh
service/: lambda_handler.py  settings.toml
service/server/: admin.py  apps.py  middleware.py  urls.py
service/server/logic/: db.py  next_move.py  next_move_classic.py  next_move_mini.py  solvers.py
service/server/logic/recaptcha/: validator.py
service/server/management/commands/: dev_init.py  temp.py
service/server/migrations/: 0002_rename_state_json_game_state_data.py  0003_delete_game.py
service/server/models/: game.py
service/server/static/scripts/: recaptcha.js
service/server/tests/: spymaster_test.py
service/server/tests/integration_tests/: test_api.py
service/server/tests/integration_tests/api_tests/: api_test.py
service/server/tests/integration_tests/other/: test_admin_loads.py
service/server/tests/util/: deep_diff.py
service/server/views/: endpoint.py  game.py
service/server/views/game/: base.py  classic.py  duet.py  mini.py
service/the_spymaster/: asgi.py  config.py  settings.py  urls.py
src/: Makefile  lambda_handler.py  manage.py  settings.toml
src/api/: admin.py  apps.py  middleware.py
src/api/logic/: db.py  errors.py  game.py  next_move.py  solvers.py
src/api/logic/recaptcha/: validator.py
src/api/management/commands/: create_tables.py  dev_init.py  temp.py
src/api/migrations/: 0001_initial.py  0002_rename_state_json_game_state_data.py  0003_delete_game.py
src/api/models/: game.py
src/api/serializers/: users.py
src/api/structs/: errors.py  request.py  response.py
src/api/tests/: spymaster_test.py
src/api/tests/integration_tests/api_tests/: api_test.py
src/api/tests/integration_tests/other/: test_admin_loads.py
src/api/views/: auth.py  authentication_classes.py  endpoint.py  game.py  other.py  social_hooks.py
src/server/: middleware.py
src/server/logic/: db.py  solvers.py
src/server/management/commands/: create_tables.py
src/server/models/: user.py
src/server/serializers/: users.py
src/server/tests/integration_tests/other/: test_index_loads.py
src/server/tests/util/: deep_diff.py
src/server/views/: __init__.py  auth.py  authentication_classes.py  other.py  social_hooks.py
src/the_spymaster/: config.py  settings.py  urls.py
telegram_bot/: client.py  conversation.py  echo.py  handlers.py  listener.py  logic.py  main.py  models.py  spymaster_client.py  the_spymaster_bot.py
templates/: index.html
tf/: .gitignore  .terraform.lock.hcl  Makefile  api.tf  db.tf  image.tf  main.tf  security.tf  service.tf
tf/python_excludes/: main.tf
tf_secrets/: Makefile  main.tf
tf_service/: .terraform.lock.hcl  Makefile  api.tf  db.tf  dns.tf  image.tf  main.tf  serivce.tf  service.tf
the_spymaster/: config.py  settings.py  urls.py  wsgi.py
the_spymaster/utils/: __init__.py  config.py  context_thread.py  logging.py
the_spymaster_api/: __init__.py  client.py
the_spymaster_api/structs/: base.py  request.py  response.py
utils/: __init__.py  config.py  logging.py
