# Poetry

[tool.poetry]
name = "the-spymaster-backend"
package-mode = false
description = ""
authors = ["Asaf Kali <asaf.kali@mail.huji.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Codenames
codenames = "^5.3"
the-spymaster-api = { path = "./api", develop = true }
the-spymaster-util = { version = "^3.2", extras = ["all"] }
the-spymaster-solvers-api = "^3.0"
# Server
Django = "^4.2"
django-allauth = "^0.50"
django-filter = "^21.1"
# psycopg2-binary = "2.9.3"
mangum = "^0.15"
pynamodb = "^5.4"
# REST
djangorestframework = "^3.13"
dj-rest-auth = "^2.2"
requests = "^2.28"
pydantic = "^2.8"
# Other
django-json-widget = "^1.1"
boto3 = "1.34"
dynaconf = "^3.1"
urllib3 = "<2.0" # Specified due to dependency resolution issue
# Monitor
sentry-sdk = "^2.8"

[tool.poetry.group.test.dependencies]
django-queryinspect = "^1.1"
pytest = "^7.1"
coverage = { version = "^6.5", extras = ["toml"] }
pytest-django = "^4.5"
parameterized = "^0.8"
freezegun = "^1.2"
moto = "^4.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.7"
black = "^24.3"
isort = "^5.11"
mypy = "^1.13"
pylint = "^3.3"
types-requests = "^2.28.11.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17"
twine = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Test

[tool.pytest.ini_options]
pythonpath = "service"
addopts = "-s --disable-pytest-warnings"
DJANGO_SETTINGS_MODULE = "the_spymaster.settings"

[tool.coverage.run]
omit = ["service/server/tests/*"]
source = ["service", "api"]

# Lint

[tool.ruff]
line-length = 120
exclude = ["local", ".deployment"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W"]
ignore = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["service"]
skip = ["__init__.py", ".deployment/"]

[tool.mypy]
exclude = ["local/", ".deployment/"]

[[tool.mypy.overrides]]
module = "allauth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dj_rest_auth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parameterized"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true

[tool.pylint]
max-line-length = 120
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "W1203",
]
extension-pkg-allow-list = ["pydantic"]
