[tool.poetry]
name = "the-spymaster-api"
version = "3.0.5"
description = "Python client implementation for The Spymaster HTTP backend."
authors = ["Asaf Kali <asaf.kali@mail.huji.ac.il>"]

[tool.poetry.urls]
Homepage = "https://github.com/asaf-kali/the-spymaster-backend"
Repository = "https://github.com/asaf-kali/the-spymaster-backend"
Issues = "https://github.com/asaf-kali/the-spymaster-backend/issues"

[tool.poetry.dependencies]
python = "^3.9"
codenames = "^5.4"
the-spymaster-util = { version = "^3.2", extras = ["clients"] }
the-spymaster-solvers-api = "^3.0"
pydantic = "^2.0"
requests = "^2.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
